some meetup endpoint implementations

--- a/apineitor-meetup/pom.xml
+++ b/apineitor-meetup/pom.xml
@@ -9,4 +9,11 @@
 
 	<artifactId>apineitor-meetup</artifactId>
 
+	<dependencies>
+		<dependency>
+			<groupId>es.alrocar</groupId>
+			<artifactId>apineitor-core</artifactId>
+			<version>${project.parent.version}</version>
+		</dependency>
+	</dependencies>
 </project>
